package edu.fiuba.algo3.modelo;

public abstract class Pista implements RespuestasDelEvento {
    String pista;

    public abstract String obtenerRespuesta();
}
